--- a/SolarSystemTemplateCSS.css
+++ b/SolarSystemTemplateCSS.css
@@ -62,7 +62,7 @@
     height: 10vh;   
 }
 
-body {color: blue;
+body {color: white;
       background-color: black;
       background-image: url('img/outerspace.gif');
 }
@@ -182,6 +182,3 @@ a:hover{
   color:black;
 }
 
- 
-
- 
