--- a/earthoh.css
+++ b/earthoh.css
@@ -62,7 +62,7 @@
       height: 30%;
       
       background-color: black;
-      background-image: url('img/star.gif');
+      background-image: url('images/star.gif');
       background-repeat: repeat-x;
       background-size:contain;
       height: 10vh;   
@@ -77,7 +77,7 @@
       height: 30%;
       
       background-color: black;
-      background-image: url('img/star.gif');
+      background-image: url('images/star.gif');
       background-repeat: repeat-x;
       background-size:contain;
       height: 10vh;   
@@ -85,7 +85,7 @@
   
   body {color: blue;
         background-color: black;
-        background-image: url('img/outerspace.gif');
+        background-image: url('images/outerspace.gif');
   }
   
   .planetImage{
@@ -96,7 +96,7 @@
   }
   
   #mainSection{
-     background-image: url('img/outerspace.gif');
+     background-image: url('images/outerspace.gif');
      min-height: 300px;
      overflow: hidden;
   }
@@ -104,7 +104,7 @@
   
   
   #sidebar1{
-     background-image: url('outerspace.gif');
+     background-image: url('images/outerspace.gif');
      border: 4px solid #00FFFF; padding: 5px;
      min-height: 500px;
      float: left;
@@ -114,7 +114,7 @@
 
   
   #sidebar2{
-     background-image: url('img/outerspace.gif');
+     background-image: url('images/outerspace.gif');
      border: 4px solid #00FFFF; padding: 5px;
      min-height: 500px;
      float: right;
@@ -125,20 +125,24 @@
   
   main{
     
-    background-image: url('img/outerspace.gif');
+    background-image: url('images/outerspace.gif');
     padding: 3em 0 3em 0;
   }
   
   
   
   
-  .planetNameBanner {color: #FF00FF;
+  .planetNameBanner {
+    
+      color: #FF00FF;
           font-family: cards;
           /* background-color: yellow;  */
           font-size:100px;
-       border: 4px solid #00FFFF; padding: 5px;
+       padding: 5px;
        text-align: center;
        margin:auto;
+       border: 4px solid #00FFFF; padding: 5px;
+
   }
   
   .nav{
@@ -167,7 +171,7 @@
   
    a{
    
-   width: 125px
+   width: 125px;
    text-decoration:none;
    display:block;
    text-align:center;
@@ -185,12 +189,15 @@
   
   
   
-  
+  footer{     border: 4px solid #00FFFF;
+  }
   .footerBottom{
     background-color: yellow;
     padding: 20px;
     text-align: center;
     margin: 0px;
+    border: 4px solid #00FFFF; 
+
   }
   
   .footerBottom p{
